fixed color bar alignment

--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -66,7 +66,7 @@
 
   .welcome-header {
     width: 100vw;
-    height: 200px;
+    height: 150px;
     justify-content: center;
     background-color: #F7EBE8;
   }
